
    HADOOP-12508. delete fails with exception when lease is held on blob.
    (Gaurav Kanade via cnauroth)

    HADOOP-12542. TestDNS fails on Windows after HADOOP-12437. (cnauroth)

    HADOOP-12540. TestAzureFileSystemInstrumentation#testClientErrorMetrics
    fails intermittently due to assumption that a lease error will be thrown.
    (Gaurav Kanade via cnauroth)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11959. WASB should configure client side socket timeout in storage
    client blob request options. (Ivan Mitic via cnauroth)

    HADOOP-11934. Use of JavaKeyStoreProvider in LdapGroupsMapping causes
    infinite loop. (Larry McCay via cnauroth)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed